syntax = "proto3";
package layer.dispute;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/tellor-io/layer/x/dispute/types";

message Vote {
  
  uint64 id = 1; 
  google.protobuf.Timestamp voteStart = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true]; 
  google.protobuf.Timestamp voteEnd = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true]; 
  VoteResult voteResult = 4; 
  repeated string voters = 5;
}

enum VoteResult {
  NO_TALLY = 0; // default
  SUPPORT = 1; // quorum reached
  AGAINST = 2; // quorum reached 
  INVALID = 3; // quorum reached
  NO_QUORUM_MAJORITY_SUPPORT = 4; // quorum not reached
  NO_QUORUM_MAJORITY_AGAINST = 5; // quorum not reached
  NO_QUORUM_MAJORITY_INVALID = 6; // quorum not reached
}